@@ -21,3 +21,4 @@ ggplot2 0.8.2  (2008-XX-XX)
 * stats: all give useful error message if missing a required aesthetic
 * be explicit about plyr::is.discrete to avoid clash with Hmisc
 * ggsave: filename now first parameter, not second
+* cut_interval and cut_number utility functions to discretise continuous variables
